layout and font updated

--- a/app/src/main/res/layout/activity_announcement.xml
+++ b/app/src/main/res/layout/activity_announcement.xml
@@ -30,6 +30,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:fontFamily="@font/montserrat_bold"
                 android:text="The physics lecture will be uploaded from tomorrow."
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -46,6 +47,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:fontFamily="@font/montserrat"
                 android:text="St. Joseph's School, Khorabar"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
