--- a/app/src/main/res/layout/activity_cardview_hone.xml
+++ b/app/src/main/res/layout/activity_cardview_hone.xml
@@ -29,6 +29,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:fontFamily="@font/montserrat_bold"
                 android:text="St. Joseph's School, Khorabar"
                 android:textColor="#000000"
                 android:textSize="24sp"
@@ -46,6 +47,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:fontFamily="@font/montserrat"
                 android:text="Khorabar, Gorakhpur 273010"
                 android:textColor="#000000"
                 android:textSize="18sp"
