--- a/app/src/main/res/layout/activity_cardview_lecture.xml
+++ b/app/src/main/res/layout/activity_cardview_lecture.xml
@@ -29,6 +29,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:fontFamily="@font/montserrat_bold"
                 android:text="Time dilation and Relativity"
                 android:textSize="24sp"
                 android:textStyle="bold"
@@ -59,6 +60,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
+                android:fontFamily="@font/montserrat"
                 android:text="This is the lecture on time dilation and relativity by professor corteri."
                 android:textSize="18sp"
                 app:layout_constraintBottom_toTopOf="@+id/button3"
@@ -75,6 +77,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:fontFamily="@font/montserrat_bold"
                 android:text="Play"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -89,6 +92,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:fontFamily="@font/montserrat_bold"
                 android:text="Resources"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/button"
@@ -105,6 +109,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:fontFamily="@font/montserrat_bold"
                 android:text="Q &amp; A"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/button3"
