--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -28,6 +28,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
+                android:fontFamily="@font/montserrat_bold"
                 android:paddingStart="40dp"
                 android:paddingTop="16dp"
                 android:paddingEnd="40dp"
@@ -47,6 +48,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="8dp"
+                android:fontFamily="@font/montserrat"
                 android:text="Already have an account? Sign-In"
                 android:textColor="@color/colorBlack"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -86,6 +88,7 @@
                         android:id="@+id/subIdEditText_nameFirst"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/montserrat"
                         android:inputType="text"
                         android:maxLines="1"
                         android:minLines="1" />
@@ -113,6 +116,7 @@
                         android:id="@+id/subIdEditText_nameLast"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/montserrat"
                         android:inputType="text"
                         android:maxLines="1"
                         android:minLines="1" />
@@ -140,6 +144,7 @@
                         android:id="@+id/subIdEditText_phone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/montserrat"
                         android:inputType="text"
                         android:maxLines="1"
                         android:minLines="1" />
@@ -166,6 +171,7 @@
                         android:id="@+id/subIdEditText_emailRegister"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/montserrat"
                         android:inputType="textEmailAddress"
                         android:maxLines="1"
                         android:minLines="1" />
@@ -192,6 +198,7 @@
                         android:id="@+id/subIdEditText_passwordRegister"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/montserrat"
                         android:inputType="textPassword"
                         android:maxLines="1"
                         android:minLines="1" />
@@ -207,6 +214,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="16dp"
+                android:fontFamily="@font/montserrat_bold"
                 android:text="Powered by Corteri"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -235,6 +243,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="32dp"
                     android:layout_marginEnd="16dp"
+                    android:fontFamily="@font/montserrat_bold"
                     android:text="Register!"
                     android:textColor="#FFFFFF"
                     android:textSize="52sp"
@@ -252,6 +261,7 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="16dp"
+                    android:fontFamily="@font/montserrat_bold"
                     android:text="Welcome on board!"
                     android:textColor="#FFFFFF"
                     android:textSize="24sp"
