--- a/app/src/main/res/layout/activity_cardview_chapter.xml
+++ b/app/src/main/res/layout/activity_cardview_chapter.xml
@@ -43,6 +43,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:fontFamily="@font/montserrat_bold"
                 android:text="Theory of relativity"
                 android:textSize="24sp"
                 android:textStyle="bold"
