--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -29,6 +29,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:fontFamily="@font/montserrat_bold"
                 android:text="Professor corteri has uploaded a new video on  time travel."
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -59,6 +60,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:fontFamily="@font/montserrat"
                 android:text="St. Joseph's School, Khorabar"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
