--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -84,7 +84,7 @@
                         android:id="@+id/subIdEditText_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/montserrat"
+                        android:fontFamily="sans-serif"
                         android:inputType="textPassword"
                         android:maxLines="1"
                         android:minLines="1" />
@@ -111,7 +111,7 @@
                         android:id="@+id/subIdEditText_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/montserrat"
+                        android:fontFamily="sans-serif"
                         android:inputType="textEmailAddress"
                         android:maxLines="1"
                         android:minLines="1" />
@@ -153,7 +153,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="32dp"
                     android:layout_marginEnd="16dp"
-                    android:fontFamily="@font/montserrat_bold"
+                    android:fontFamily="sans-serif"
                     android:text="Welcome!"
                     android:textColor="#FFFFFF"
                     android:textSize="52sp"
@@ -171,7 +171,7 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="32dp"
-                    android:fontFamily="@font/montserrat_bold"
+                    android:fontFamily="sans-serif"
                     android:text="To the digital learning"
                     android:textColor="#FFFFFF"
                     android:textSize="24sp"
