--- a/app/src/main/res/layout/activity_cardview_discussion.xml
+++ b/app/src/main/res/layout/activity_cardview_discussion.xml
@@ -59,7 +59,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:text="How can we calculate the rate at which the time slows down when the gravity is increases certain times. And can we calculate the sane for black hole. Can you explain if there is any formuae for doing so and if that is the case then please derive the proof."
+                android:text="How can we calculate the rate at which the time slows down when the gravity is increases certain times?  And can we calculate the same for black hole? Can you explain if there is any formuae for doing so and if that is the case then please derive the proof."
                 android:textSize="18sp"
                 app:layout_constraintBottom_toTopOf="@+id/textView16"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -91,10 +91,24 @@
                 android:layout_marginBottom="8dp"
                 android:text="Mr. Corteri"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/button2"
                 app:layout_constraintStart_toEndOf="@+id/textView16"
                 app:layout_constraintTop_toBottomOf="@+id/textView15"
                 app:layout_constraintVertical_bias="0.7" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="See answer"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/textView17"
+                app:layout_constraintTop_toBottomOf="@+id/textView15" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
